# ReZeb

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_projects.py  0003_add_api_keys.py
backend/app/: main.py
backend/app/core/: aitunnel.py  audit_middleware.py  config.py  cost_tracker.py  email.py  exceptions.py  logging.py  ml_client.py  queue.py  ratelimit.py  security.py  telegram.py
backend/app/db/: base.py  models.py  session.py
backend/app/modules/audit/: models.py  router.py  service.py
backend/app/modules/auth/: admin_router.py  apikey_models.py  apikey_router.py  dependencies.py  models.py  profile_router.py  router.py  schemas.py  service.py
backend/app/modules/control/: models.py  prompts.py  router.py  schemas.py  service.py
backend/app/modules/ntd/: models.py  rag.py  router.py  service.py
backend/app/modules/projects/: models.py  router.py
backend/app/modules/pto/: models.py  prompts.py  registry_router.py  router.py  schemas.py  service.py
backend/app/modules/registry/: indexer.py
backend/app/modules/test/: router.py
backend/app/templates/email/: password_reset.html  registration.html
backend/app/workers/: main.py
backend/scripts/: init_db.sql  seed_dev_data.py  seed_ntd_data.py
backend/tests/: conftest.py
backend/tests/test_auth/: test_auth.py  test_extra_auth.py
backend/tests/test_control/: test_control.py  test_control_extended.py
backend/tests/test_media/: test_media_service.py
backend/tests/test_ntd/: test_ntd.py
backend/tests/test_projects/: test_projects.py
backend/tests/test_pto/: test_pto.py
docs/: ReZeb_Full_Checklist.docx  ReZeb_MVP_Checklist.docx  TZ_AI_Platform_MVP-1.docx
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json  sw.js
ml_service/: Dockerfile  main.py
nginx/: nginx.conf
(+30 files in other folders)
