[project]
name = "rezeb-backend"
version = "0.1.0"
description = "ReZeb AI Platform — backend API"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",

    # Auth
    "fastapi-users[sqlalchemy]>=13.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "passlib[bcrypt]>=1.7.4",

    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.1.0",

    # Redis / Queue
    "redis>=5.0.0",
    "arq>=0.25.0",

    # S3
    "aioboto3>=13.0.0",
    "boto3>=1.34.0",

    # LLM / AI
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",

    # Image processing
    "pillow>=10.4.0",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0",
    "onnxruntime>=1.19.0",
    "rapidfuzz>=3.9.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.2.0",
    "uuid-utils>=0.9.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "PyMuPDF>=1.24.0",
    "sentry-sdk[fastapi]>=2.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
    "types-passlib>=1.7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]
